# cot6930-mlip-kafka-lab2

./: KafkaDemo.ipynb  kafka_consumer.py  kafka_producer.py  pyproject.toml
